django-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-rest
  template:
    metadata:
      labels:
        app: django-rest
    spec:
      containers:
      - name: django-rest
        image: rahulqelfo/django-rest:v1
        imagePullPolicy: Always
