django-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-rest-svc
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: django-rest
