django-rest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: LOAD_BALANCER_IP
      http:
        paths:
          - path: /
            backend:
              serviceName: django-rest-svc
              servicePort: 8000
